--- a/style.css
+++ b/style.css
@@ -755,7 +755,7 @@ section {
 }
 
 .renewableenergy .row-renewableenergy {
-  background: url(./images/Primary\ Energy\ As\ Renewable\ Energy.jpg) no-repeat;
+  background: url(../images/Primary\ Energy\ As\ Renewable\ Energy.jpg) no-repeat;
   position: relative;
   background-size: cover;
   background-position: center;
