--- a/style.css
+++ b/style.css
@@ -680,7 +680,7 @@ section {
 }
 
 .Data2019 .row-Data2019 .Data2019 {
-  background: url(./images/Primary\ Energy\ Consumption\,\ 2019\ By\ World.JPG)
+  background: url(../images/Primary\ Energy\ Consumption\,\ 2019\ By\ World.jpg)
     no-repeat;
   position: relative;
   background-position: center;
